@@ -1,0 +1,11 @@
+We would like to express our gratitudes to Giovanni Di Sirio for
+ChibiOS/RT.
+
+NeuG was originally written by NIIBE Yutaka.  People contributed by
+encouraging the development, testing the implementation, suggesting
+improvements, or fixing bugs.  Here is a list of those people.
+
+Hironobu SUZUKI		hironobu@h2np.net
+Jan Suhr		jan@suhr.info
+Kaz Kojima		kkojima@rr.iij4u.or.jp
+Shane Coughlan		scoughlan@openinventionnetwork.com
